partial/force-app/main/default/objects/Letting__c/Letting__c.object-meta.xml
<CustomObject>
    <label>Letting</label>
    <nameField>
        <label>Letting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>