partial/force-app/main/default/objects/Letting__c/fields/Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role__c</fullName>
    <label>Agent Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>RentCollection</fullName>
            </value>
            <value>
                <fullName>CollectFirstPayment</fullName>
            </value>
            <value>
                <fullName>CollectRentToDate</fullName>
            </value>
            <value>
                <fullName>LettingOnly</fullName>
            </value>
            <value>
                <fullName>IntroducingTenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>