partial/force-app/main/default/objects/Letting__c/fields/CableTv_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>CableTv_Company_Id__c</fullName>
    <label>CableTv Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>