partial/force-app/main/default/objects/Letting__c/fields/Electricity_Meter_Point__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Meter_Point__c</fullName>
    <label>Electricity Meter Point</label>
    <length>20</length>
    <type>Text</type>
</CustomField>