partial/force-app/main/default/objects/Letting__c/fields/Gas_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Gas_Company_Id__c</fullName>
    <label>Gas Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>