partial/force-app/main/default/objects/Letting__c/fields/Gas_Meter_Point__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter_Point__c</fullName>
    <label>Gas Meter Point</label>
    <length>20</length>
    <type>Text</type>
</CustomField>