partial/force-app/main/default/objects/Letting__c/fields/Has_Gas__c.field-meta.xml
<CustomField>
    <fullName>Has_Gas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Gas</label>
    <type>Checkbox</type>
</CustomField>