partial/force-app/main/default/objects/Letting__c/fields/Landlord_Id__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Id__c</fullName>
    <label>Landlord Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>