partial/force-app/main/default/objects/Letting__c/fields/Management_Company_Ids__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Ids__c</fullName>
    <label>Management Company Ids</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMP21000001</fullName>
            </value>
            <value>
                <fullName>OXF21000004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>