partial/force-app/main/default/objects/Letting__c/fields/Management_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Percentage__c</fullName>
    <label>Management Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>