partial/force-app/main/default/objects/Letting__c/fields/Property_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager_Id__c</fullName>
    <label>Property Manager Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>