partial/force-app/main/default/objects/Letting__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <label>Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>