partial/force-app/main/default/objects/Letting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ArrangingTenancy</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>ToLet</fullName>
            </value>
            <value>
                <fullName>ToLetUnavailable</fullName>
            </value>
            <value>
                <fullName>UnderOffer</fullName>
            </value>
            <value>
                <fullName>UnderOfferUnavailable</fullName>
            </value>
            <value>
                <fullName>ArrangingTenancyUnavailable</fullName>
            </value>
            <value>
                <fullName>TenancyCurrentUnavailable</fullName>
            </value>
            <value>
                <fullName>TenancyCurrent</fullName>
            </value>
            <value>
                <fullName>TenancyFinished</fullName>
            </value>
            <value>
                <fullName>TenancyCancelled</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>LetByOtherAgent</fullName>
            </value>
            <value>
                <fullName>LetPrivately</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>