partial/force-app/main/default/objects/Letting__c/fields/Works_Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Works_Order_Note__c</fullName>
    <label>Works Order Note</label>
    <type>TextArea</type>
</CustomField>