partial/force-app/main/default/objects/Letting__c/recordTypes/Letting.recordType-meta.xml
<RecordType>
    <fullName>Letting</fullName>
    <active>true</active>
    <label>Letting</label>
</RecordType>