partial/force-app/main/default/objects/Letting__c/recordTypes/REAPIT_DATA.recordType-meta.xml
<RecordType>
    <fullName>REAPIT_DATA</fullName>
    <active>true</active>
    <label>REAPIT DATA</label>
</RecordType>